# little-helpers

./: README.md
CreateJSON/: JSON.pro  main.cpp
DegradScripts/: README.txt  RootTreeFromDegrad.C  convertDegrad.py  electrons_1keV_Ar_CF4_80_20_1000mbar.txt  electrons_1keV_Ar_CF4_80_20_100mbar.txt  electrons_1keV_Ar_CF4_80_20_500mbar.txt  electrons_2keV_Ar_CF4_80_20_1000mbar.txt  electrons_2keV_Ar_CF4_80_20_500mbar.txt  startSims.sh
apv2root/: Makefile  RawdataParser.cxx  RawdataParser.h  RootFile.cxx  RootFile.h  apv2root.cxx  apv2rootLinkDef.h  readme
csv2hdf5/: CMakeLists.txt  csv2hdf5.cpp
manipulateJSON/: Makefile  doNormalize.py  manipulateJSON.cpp  manipulateJSONLinkDef.h
